syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
package messaging;

service MessagingService {
  rpc authNonce (AuthNonceRequest) returns (AuthNonceResponse);
  rpc issueToken (IssueTokenRequest) returns (IssueTokenResponse);
}
message AuthNonceRequest {
    string agent_name = 1;
    string agent_version = 2;
}

message AuthNonceResponse {
    string nonce = 1;
}

message IssueTokenRequest {
  string machine_id = 1;
  string type = 2;
  string scope = 3;
  string nonce = 4;
  string signed_nonce = 5;
  string public_key = 6;
}

message IssueTokenResponse {
    string token = 1;
}